fix(yaml): More yaml handling fixes.  Wrap YAML with jackson which bypasses tag handling